# backprop-in-c

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  download_mnist.sh  train_classification.sh  train_regression.sh
benchmark/: CMakeLists.txt  benchmark_regression.c  np_regression.py  tf_regression.py
benchmark/regression/: CMakeLists.txt  benchmark_regression.c  np_regression.py  tf_regression.py
classification/: CMakeLists.txt  classification.c
include/: backprop.h  matrix_ops.h  mnist.h
regression/: CMakeLists.txt  regression.c
test/: CMakeLists.txt  matrix_tests.c  model_tests.c
